# openusv

./: .gitignore  BOAT_VECTORED_COMPLETE.md  BOAT_VECTORED_IMPLEMENTATION.md  BUILD_IDF.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  ESP32_HAL_FIXES_SUMMARY.md  ESP32_HAL_IMPROVEMENTS.md  HAL_FIXES_QUICK_REF.md  QUICK_REFERENCE.md  README_IDF.md  VSCODE_IDF_SETUP.md  XBOAT_POSHOLD_MANUAL_GUIDE.md  build.bat  flash_partition.bat  flash_partition_direct.bat  hwdef_patch.txt  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.defaults  test_prebuild.cmake
.claude/: settings.local.json
.claude/agents/: dronecan-esp32-implementer.md  dronecan-port-analyzer.md  esp32-dronecan-implementer.md  rover-dependency-analyzer.md
.github/workflows/: cygwin_build.yml  esp32_build.yml  test_dds.yml  test_replay.yml  test_scripting.yml  test_sitl_blimp.yml  test_sitl_copter.yml  test_sitl_plane.yml  test_sitl_rover.yml  test_sitl_sub.yml  test_sitl_tracker.yml  test_unit_tests.yml
Rover/: AP_Arming_Rover.cpp  Parameters.cpp  Rover.h  mode.cpp  mode.h  mode_manual.cpp  mode_poshold.cpp
cmake/: PreBuild.cmake
components/ardupilot/: CMakeLists.txt
docs/: ANALYSIS_AND_FIX.md  ARDUSUB_CONTROL_ANALYSIS.md  BOAT_X_ARDUSUB_STYLE_README.md  BOAT_X_IMPROVEMENT_CODE.md  BOAT_X_TEST_GUIDE.md  BUILD_GUIDE.md  DRONECAN_ENABLED.md  DRONECAN_ESC_TELEM_ENABLED.md  DRONECAN_IMPLEMENTATION_PLAN.md  DRONECAN_IMPLEMENTATION_SUMMARY.md  DRONECAN_QUICK_START.md  DRONECAN_STATUS.md  DRONECAN_TESTING_GUIDE.md  ESP32_HAL_Improvements_Summary.md  ESP32_README.md  ESP_IDF_V5.5_FIXES.md  FINAL_FIX_SUMMARY.md  GPS_UBLOX_MAXM10S_CONFIG.md  HEADER_FIXES_SUMMARY.md  IMPLEMENTATION_PATCHES.md  PSRAM_ENABLED.md  QUICK_FIX_GUIDE.md  README.md  README_FIXES.md
docs/archived/: AC_MODULES_CLEANUP.md  AC_PRECLAND_FIX.md  ADDITIONAL_FIXES_REPORT.md  BOARD_SELECTION_MECHANISM.md  BOOT_LOOP_FIX.md  CMAKELISTS_REFACTOR.md  CMAKE_VS_HWDEF_ANALYSIS.md  COMPILATION_FIXES_SUMMARY.md  COMPILATION_FIX_REPORT.md  COMPLETE_HAL_UPGRADE_SUMMARY.md  CRITICAL_ISSUES_FIX_REPORT.md  DRONECAN_COMPILATION_FIX_REPORT.md  ESP32_NO_SITL_ANALYSIS.md  ESP32_VS_CHIBIOS_HAL_ANALYSIS.md  ESP32_VS_CHIBIOS_HAL_GAP_ANALYSIS.md  FIX_IMPLEMENTATION_REPORT.md  HAL_COMPLETENESS_UPGRADE_REPORT.md  HAL_COMPLETE_OPTIMIZATION_SUMMARY.md  HAL_PHASE4_UPGRADE_REPORT.md  IMPROVED_CMAKE.txt  LIBRARY_REMOVAL_SUMMARY.md  LOG_ANALYSIS_AFTER_FIX.md  LOG_ANALYSIS_AND_SOLUTION.md  OPTIMIZATION_PHASE2_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PRIORITY_IMPROVEMENTS_SUMMARY.md  QUICK_OPTIMIZATION_GUIDE.md  ROVER_FRAME_TYPE_ANALYSIS.md  (+7 more)
libraries/AC_AttitudeControl/: CMakeLists.txt
libraries/AC_AutoTune/: CMakeLists.txt
libraries/AC_Autorotation/: CMakeLists.txt
libraries/AC_Avoidance/: CMakeLists.txt
libraries/AC_CustomControl/: CMakeLists.txt
libraries/AC_PID/: CMakeLists.txt
libraries/AC_PrecLand/: CMakeLists.txt
libraries/AC_WPNav/: CMakeLists.txt
libraries/AP_ADSB/: CMakeLists.txt
libraries/AP_AHRS/: CMakeLists.txt
libraries/AP_Airspeed/: CMakeLists.txt
libraries/AP_Baro/: CMakeLists.txt
libraries/AP_BattMonitor/: AP_BattMonitor.cpp  AP_BattMonitor_Analog.h  CMakeLists.txt
libraries/AP_Beacon/: CMakeLists.txt
libraries/AP_CANManager/: AP_CANManager.cpp  CMakeLists.txt
libraries/AP_Camera/: CMakeLists.txt
libraries/AP_CheckFirmware/: AP_CheckFirmwareDefine.h  AP_CheckFirmware_secure_command.cpp  CMakeLists.txt
libraries/AP_Common/: AP_Common.h  CMakeLists.txt  ap_time.h  c++.cpp  time.cpp
libraries/AP_Common/tests/: test_bitmask.cpp  test_sorting.cpp
libraries/AP_Compass/: AP_Compass.cpp  AP_Compass_AK09916.cpp  AP_Compass_AK09916.h  AP_Compass_LSM303D.cpp  CMakeLists.txt
libraries/AP_DAC/: CMakeLists.txt
libraries/AP_DAL/: AP_DAL.cpp  CMakeLists.txt
libraries/AP_DDS/: AP_DDS_Client.cpp  AP_DDS_config.h  CMakeLists.txt
libraries/AP_DroneCAN/: CMakeLists.txt  dronecan_msgs.h
libraries/AP_DroneCAN/examples/DroneCAN_sniffer/: DroneCAN_sniffer.cpp
libraries/AP_DroneCAN/include/: .generated_stamp  ardupilot.equipment.power.BatteryTag.h  dronecan.protocol.FlexDebug.h  dronecan.protocol.GlobalTime.h  dronecan.remoteid.ArmStatus.h  dronecan.remoteid.BasicID.h  dronecan.remoteid.Location.h  dronecan.remoteid.OperatorID.h  dronecan.remoteid.SecureCommand_req.h  dronecan.remoteid.SecureCommand_res.h  dronecan.remoteid.SelfID.h  dronecan.remoteid.System.h  dronecan.sensors.rc.RCInput.h  dronecan_msgs.h  uavcan.equipment.actuator.ArrayCommand.h  uavcan.equipment.ahrs.MagneticFieldStrength.h  uavcan.equipment.ahrs.MagneticFieldStrength2.h  uavcan.equipment.ahrs.RawIMU.h  uavcan.equipment.ahrs.Solution.h  uavcan.equipment.air_data.RawAirData.h  uavcan.equipment.camera_gimbal.Status.h  uavcan.equipment.esc.RPMCommand.h  uavcan.equipment.esc.RawCommand.h  uavcan.equipment.gnss.ECEFPositionVelocity.h  uavcan.equipment.gnss.Fix.h  uavcan.equipment.gnss.Fix2.h  uavcan.equipment.gnss.RTCMStream.h  uavcan.equipment.ice.reciprocating.Status.h  uavcan.equipment.indication.LightsCommand.h  uavcan.equipment.power.BatteryInfo.h  uavcan.navigation.GlobalNavigationSolution.h  uavcan.protocol.AccessCommandShell_req.h  uavcan.protocol.AccessCommandShell_res.h  uavcan.protocol.GetDataTypeInfo_req.h  uavcan.protocol.GetDataTypeInfo_res.h  uavcan.protocol.GetNodeInfo_res.h  uavcan.protocol.GetTransportStats_res.h  uavcan.protocol.HardwareVersion.h  uavcan.protocol.Panic.h  uavcan.protocol.debug.KeyValue.h  (+18 more)
libraries/AP_DroneCAN/src/: ardupilot.equipment.power.BatteryTag.c  dronecan.protocol.FlexDebug.c  dronecan.protocol.GlobalTime.c
libraries/AP_EFI/: CMakeLists.txt
libraries/AP_ESC_Telem/: CMakeLists.txt
libraries/AP_ExternalAHRS/: CMakeLists.txt
libraries/AP_Filesystem/: AP_Filesystem.h  AP_Filesystem_FATFS.cpp  AP_Filesystem_FlashMemory_LittleFS.cpp  AP_Filesystem_Mission.cpp  AP_Filesystem_Param.cpp  AP_Filesystem_config.h  AP_Filesystem_posix.cpp  CMakeLists.txt
libraries/AP_Frsky_Telem/: CMakeLists.txt
libraries/AP_GPS/: AP_GPS_GSOF.cpp  AP_GPS_SBF.cpp  CMakeLists.txt  GPS_Backend.cpp
libraries/AP_Generator/: CMakeLists.txt
main/: main.c
(+273 files in other folders)
